Added filter operator
